tests/sksl/errors/BadConstInitializers.glsl
### Compilation failed:

error: 16: 'const' variable initializer must be a constant expression
error: 17: 'const' variable initializer must be a constant expression
error: 18: 'const' variable initializer must be a constant expression
error: 19: 'const' variable initializer must be a constant expression
error: 20: 'const' variable initializer must be a constant expression
error: 21: 'const' variable initializer must be a constant expression
error: 22: 'const' variable initializer must be a constant expression
7 errors
